--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -2,6 +2,5 @@
 
 {% block content %}
 <h1> Welcome </h1>
-<p> This is a site I am playing with.</p>
-<p> </p>
+<p> This is a site I am playing with. My interests are...</p>
 {% endblock %}
