--- a/flask/templates/digits.html
+++ b/flask/templates/digits.html
@@ -11,7 +11,7 @@
   <p> This project uses a Convolutional Neural Network (CNN) programmed in Tensorflow to recognize a digit drawn in an HTML5 canvas.</p>
   <p> Give it a try by writing a numeral from 0-9, in the box below and click submit. </p>
   <p> Be patient as the first input will take a while as the machine learning server will need to spin up.</p>
-  <div class="col-sm-12 text-center">
+  <div class="text-center">
     <div id="container">
       <canvas id="imageView" width="84" height="84" style="border: 1px solid #000">
         <p> Unfortunately, your browser isn't currently unsupported. </p>
@@ -21,7 +21,6 @@
     <button id="submitBtn" class="btn btn-primary btn-md center-block" onclick="submitCanvas()"> Submit </button>
     <button class="btn btn-danger btn-md center-block" onclick="clearCanvas()"> Erase </button>
     <p id="error" style="color:red"></p>
-
   </div>
 
   <table id="topK" class="table text-center table-bordered table-sm">
@@ -40,16 +39,19 @@
       and then rescaling the image to 28x28 before creating the 784 dimensional vector. </p>
   <p> After you draw this is what the input looks like:</p>
   <img id="moded" src="" style="border-style: solid;border-width: 3px; border-color: red;"/> 
-  <p> To really visualize this try drawing in the corner of the prediction box to see the centering in action. </p>
 
+  <p> To really visualize this try drawing in the corner of the prediction box to see the centering in action. </p>
   <p> This was much closer to the training data, and boosted my accuracy.</p>
+
+  <h2> Infrastructure </h2>
 
   <p> While this is currently a toy project to play with Google's ML engine and Tensorflow.
       In a more production setting we would like to reuse the users input and put it into the training set, rolling out
       new models as we collect more data.
   </p>
+  <br>
   <img src="static/img/ml_diagram_color.png" width="420" height="180" class="center">
-
+  <br>
   <ol>
     <li> The user draws a digit on the canvas element, which is sent to the Flask backend. </li>
     <li> The backend pre-processes the data and converts it to a 784 dimensional vector, which is sent to the ML Engine instance for classification. </li>
