--- a/flask/templates/digits.html
+++ b/flask/templates/digits.html
@@ -41,7 +41,7 @@
   </p>
   <p> The training data consisted of centered digits. To be consistent the drawn images needed preprocessing. 
       The accuracy soared after identifying where to crop using a bounding box, padding with extra white space to help preserve the aspect ratio,
-      then scaling the image to the required 28x28 </p>
+      then scaling the image to the required 28x28. </p>
   
   <p> For a clear example of the transformation, try drawing in the corner of the prediction box then clicking submit to see the image below. </p>
   <img id="transformed" src="" style="border-style: solid;border-width: 3px; border-color: red; visibility: hidden;"/> 
